Traffick Light almost ready

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,17 @@
-
+#traffickLight{
+    display: block;
+    padding: 20px;
+    background-color: black;
+    width: 200px;
+    height: 400px;
+    border-radius: 15px;
+}
+button{
+    border-radius: 100px;
+    width: 75%;
+    height: 100px;
+    margin: 3px;
+}
 /* 
 
     You can write your own styles here...
