--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,7 +13,9 @@ button{
     height: 100px;
     margin: 3px;
 }
-
+#randomButton{
+    text-align: center;
+}
 /* 
 
     You can write your own styles here...
