--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,10 @@
     height: 400px;
     border-radius: 15px;
     text-align: center;
+    transition: height 0.5s ease;
+}
+#traffickLight.expand {
+    height: 500px;
 }
 button{
     border-radius: 100px;
@@ -15,6 +19,16 @@ button{
 }
 #randomButton{
     text-align: center;
+}
+#purpleLight {
+    transition: all 0.5s ease;
+    transform: scale(0);
+    opacity: 0;
+}
+
+#purpleLight.show {
+    transform: scale(1); 
+    opacity: 1; 
 }
 /* 
 
